--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -99,7 +99,15 @@ textarea {
 
 
 
+span.glyphicon.glyphicon-camera {
+vertical-align: text-top;
+}
 
+button#upload {
+font-size: 22em;
+width: 100%;
+vertical-align: top;
+}
 
 
 
