--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -12,12 +12,13 @@
     - if thanks
         .alert.alert.info
             {{thanks}}
-    %form.well{action:'{%url "snapit_upload"%}', method:'POST', enctype:"multipart/form-data"}
+    %form{action:'{%url "snapit_upload"%}', method:'POST', enctype:"multipart/form-data"}
         {{form.as_p}}
         /%input{type:'file',accept:'image/*', capture:'camera', name:'{{form.file.html_name}}', id:'{{form.file.id_for_label}}'}
         {% csrf_token %}
-        %button#upload.btn.btn-primary.btn-large.form-control{type:'submit'}
-            Upload
+
+    %center
+        %img#upload{src:'{%static "img/camera.png" %}'}
 
 
 
