--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -18,7 +18,7 @@
         {% csrf_token %}
 
     %center
-        %img#upload{src:'{%static "img/camera.png" %}'}
+        %img{src:'{%static "img/camera.png" %}'}
 
 
 
@@ -26,5 +26,15 @@
         /type="file" accept="image/*" id="file" capture="camera"
 
 
-    %script{type:'text/javascript', src:'{%static "js/main.js" %}'}
+    .row
+        .col-lg-2.col-lg-offset-5.well.col-xs-10.col-xs-offset-1
+            %a#upload.btn.btn-block.form-control{href:'{%url "snapid_view" %}'}
+                    Bilder hinzufügen
+            %a.btn.btn-block.btn-primary.form-control{href:'{%url "snapid_view" %}'}
+                    Bilder anzeigen
+    .row
+        .col-xs-2.col-xs-offset-5
 
+
+
+    %script{type:'text/javascript', src:'{%static "js/main.js" %}'}
