--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -18,7 +18,9 @@
         {% csrf_token %}
 
     %center
-        %img{src:'{%static "img/camera.png" %}'}
+        .row
+            .col-xs-10.col-xs-offset-1.camera.col-md-4.col-md-offset-4
+                %img{src:'{%static "img/camera.png" %}'}
 
 
 
