--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -113,12 +113,55 @@ body{
     background-image: url('../img/pattern.png');
 }
 
+.camera img{
+    max-width: 100%;
+    max-height: 100%;
+}
 
 
+.image-container {
+    height: 100%;
+}
 
+.image-container img{
+    display: block;
+    margin: 0 auto;
+}
+.magictime {
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+.magic {
+  -webkit-animation-name: magic;
+  -moz-animation-name: magic;
+  -ms-animation-name: magic;
+  -o-animation-name: magic;
+  animation-name: magic;
+}
 
+.puffOut {
+  -webkit-animation-name: puffOut;
+  -moz-animation-name: puffOut;
+  -ms-animation-name: puffOut;
+  -o-animation-name: puffOut;
+  animation-name: puffOut;
+}
 
-
+.puffIn {
+  -webkit-animation-name: puffIn;
+  -moz-animation-name: puffIn;
+  -ms-animation-name: puffIn;
+  -o-animation-name: puffIn;
+  animation-name: puffIn;
+}
 
 
 
