--- a/base/templates/__base.haml
+++ b/base/templates/__base.haml
@@ -15,7 +15,7 @@
             /bootstrap
             %link{rel:"stylesheet", href:"{% static 'css/bootstrap-theme.min.css'%}"}
             %link{rel:"stylesheet", href:"{% static 'css/bootstrap.min.css'%}"}
-
+            %link{rel:"stylesheet", href:"{% static 'css/magic.min.css'%}"}
 
         - compress js
             %script{src:"{%static 'js/vendor/modernizr-2.6.2.min.js' %}"}
