--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -10,12 +10,9 @@
 
         /%
     - if thanks
-        .alert.alert.info
+        .alert.alert-info
             {{thanks}}
-    %form{action:'{%url "snapit_upload"%}', method:'POST', enctype:"multipart/form-data"}
-        {{form.as_p}}
-        /%input{type:'file',accept:'image/*', capture:'camera', name:'{{form.file.html_name}}', id:'{{form.file.id_for_label}}'}
-        {% csrf_token %}
+
 
     %center
         .row
@@ -30,7 +27,12 @@
 
     .row
         .col-lg-2.col-lg-offset-5.well.col-xs-10.col-xs-offset-1
-            %a#upload.btn.btn-block.form-control{href:'{%url "snapid_view" %}'}
+             %form{action:'{%url "snapit_upload"%}', method:'POST', enctype:"multipart/form-data"}
+                //{{form.as_p}}
+                %input{type:'file',accept:'image/*', capture:'camera', name:'{{form.file.html_name}}', id:'{{form.file.id_for_label}}'}
+                {% csrf_token %}
+
+            %a#upload.btn.btn-block.form-control{href:'#'}
                     Bilder hinzufügen
             %a.btn.btn-block.btn-primary.form-control{href:'{%url "snapid_view" %}'}
                     Bilder anzeigen
