--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -119,13 +119,19 @@ body{
 }
 
 
+
+
 .image-container {
     height: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .image-container img{
     display: block;
     margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 
