--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -1,7 +1,7 @@
 {%extends '__l_base.html' %}
 {% load staticfiles %}
 -block 'title'
-    {{block.super}} | Sample Page
+    Hennifer
 
 /example usage
 -block 'main-col'
