update image viewer

--- a/base/static/css/bootstrap.css
+++ b/base/static/css/bootstrap.css
@@ -755,10 +755,7 @@ pre code {
   }
 }
 .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+    padding: 0px;
 }
 .row {
   margin-right: -15px;
@@ -1583,6 +1580,10 @@ table th[class*="col-"] {
   background-color: #ebcccc;
 }
 @media (max-width: 767px) {
+      body {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
