--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -130,13 +130,47 @@ body{
 .image-container img{
     display: block;
     margin: 0 auto;
-    max-height: 100%;
     max-width: 100%;
+    box-shadow: 0px 1px 11px 1px #444343;
+
+}
+
+/*.image-container:before {
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: 10px;
+  width: 100%;
+  height: 1000px;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+
 }
 
 
+.image-container:after {
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: 10px;
+   width: 100%;
+  height: 1000px;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  -webkit-transform: rotate(145deg);
+  -moz-transform: rotate(145deg);
+  -ms-transform: rotate(145deg);
+  -o-transform: rotate(145deg);
+  transform: rotate(145deg);
 
-
+}*/
 
 /* ==========================================================================
    Helper classes
