--- a/base/templates/__base.haml
+++ b/base/templates/__base.haml
@@ -14,16 +14,16 @@
             %link{rel:"stylesheet", href:"{% static 'css/main.css'%}"}
             /bootstrap
             %link{rel:"stylesheet", href:"{% static 'css/bootstrap-theme.min.css'%}"}
-            %link{rel:"stylesheet", href:"{% static 'css/bootstrap.min.css'%}"}
+            %link{rel:"stylesheet", href:"{% static 'css/bootstrap.css'%}"}
             %link{rel:"stylesheet", href:"{% static 'css/magic.min.css'%}"}
 
         - compress js
             %script{src:"{%static 'js/vendor/modernizr-2.6.2.min.js' %}"}
             %script{src:"{%static 'js/vendor/jquery-1.10.2.min.js' %}"}
             %script{src:"{%static 'js/vendor/bootstrap.min.js' %}"}
+            %script{src:"{%static 'js/background.min.js' %}"}
 
 
     %body
-        .content-fluid
-            -block 'content'
-                Content
+        -block 'content'
+            Content
