--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -6,9 +6,6 @@
 /example usage
 -block 'main-col'
 
-
-
-        /%
     - if thanks
         .alert.alert-info
             {{thanks}}
@@ -34,8 +31,8 @@
 
             %a#upload.btn.btn-block.form-control{href:'#'}
                     Bilder hinzufügen
-            /%a.btn.btn-block.btn-primary.form-control{href:'{%url "snapid_view" %}'}
-            /        Bilder anzeigen
+            %a.btn.btn-block.btn-primary.form-control{href:'{%url "snapid_view" %}'}
+                    Bilder anzeigen
     .row
         .col-xs-2.col-xs-offset-5
 
