--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -16,9 +16,6 @@
             .col-xs-10.col-xs-offset-1.camera.col-md-4.col-md-offset-4
                 %img{src:'{%static "img/camera.png" %}'}
 
-
-
-
         /type="file" accept="image/*" id="file" capture="camera"
 
 
@@ -31,8 +28,8 @@
 
             %a#upload.btn.btn-block.form-control{href:'#'}
                     Bilder hinzufügen
-            %a.btn.btn-block.btn-primary.form-control{href:'{%url "snapid_view" %}'}
-                    Bilder anzeigen
+            / %a.btn.btn-block.btn-primary.form-control{href:'{%url "snapid_view" %}'}
+                    / Bilder anzeigen
     .row
         .col-xs-2.col-xs-offset-5
 
