--- a/snapit/templates/upload.haml
+++ b/snapit/templates/upload.haml
@@ -1,7 +1,7 @@
 {%extends '__l_base.html' %}
 {% load staticfiles %}
 -block 'title'
-    Hennifer
+    Tobtina
 
 /example usage
 -block 'main-col'
