--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -135,6 +135,15 @@ body{
 
 }
 
+.message {
+    position: absolute;
+    padding: 10px;
+    background-color: white;
+    bottom: 10px;
+    right: 0px;
+    font-size: 1.0em;
+}
+
 /*.image-container:before {
   content: '';
   position: absolute;
