--- a/base/templates/__base.haml
+++ b/base/templates/__base.haml
@@ -1,4 +1,4 @@
-{% load staticfiles compress %}
+{% load staticfiles %}
 
 <!doctype html>
 %html{lang:'de'}
@@ -9,19 +9,17 @@
         %title
             -block 'title'
                 Default Title
-        - compress css
-            %link{rel:"stylesheet",href:"{% static 'css/normalize.css'%}"}
-            %link{rel:"stylesheet", href:"{% static 'css/main.css'%}"}
+        %link{rel:"stylesheet",href:"{% static 'css/normalize.css'%}"}
+        %link{rel:"stylesheet", href:"{% static 'css/main.css'%}"}
             /bootstrap
-            %link{rel:"stylesheet", href:"{% static 'css/bootstrap-theme.min.css'%}"}
-            %link{rel:"stylesheet", href:"{% static 'css/bootstrap.css'%}"}
-            %link{rel:"stylesheet", href:"{% static 'css/magic.min.css'%}"}
+        %link{rel:"stylesheet", href:"{% static 'css/bootstrap-theme.min.css'%}"}
+        %link{rel:"stylesheet", href:"{% static 'css/bootstrap.css'%}"}
+        %link{rel:"stylesheet", href:"{% static 'css/magic.min.css'%}"}
 
-        - compress js
-            %script{src:"{%static 'js/vendor/modernizr-2.6.2.min.js' %}"}
-            %script{src:"{%static 'js/vendor/jquery-1.10.2.min.js' %}"}
-            %script{src:"{%static 'js/vendor/bootstrap.min.js' %}"}
-            %script{src:"{%static 'js/background.min.js' %}"}
+        %script{src:"{%static 'js/vendor/modernizr-2.6.2.min.js' %}"}
+        %script{src:"{%static 'js/vendor/jquery-1.10.2.min.js' %}"}
+        %script{src:"{%static 'js/vendor/bootstrap.min.js' %}"}
+        %script{src:"{%static 'js/background.min.js' %}"}
 
 
     %body
